kubernetes/front-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-front
  template:
    metadata:
      labels:
        app: angular-front
    spec:
      containers:
        - name: angular-front
          image: rodrigocaraballo/angular-inventory:0.92
          ports:
            - containerPort: 4200
---
apiVersion: v1
kind: Service
metadata:
  name: front-loadbalancer
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4200
  selector:
    app: angular-front
